# racesim

./: README.md  pyproject.toml
backend/: auth.py  bots.py  config.py  main.py  models.py  storage.py  track_gen.py
backend/broadcast/: race_broadcaster.py
backend/scheduler/: jobs.py
backend/simulation/: engine.py
docs/: api.md  event_types.md  gameplay_loop.md  maintenance.md  mechanics.md  schedule.md  stack.md  systems.md  viewer_config.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: api.js  main.js  router.js  style.css
frontend/src/views/: auth.js  garage.js  race.js  results.js  schedule.js
